# softwares_RIOMAR

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RSFC_REPORT.md  codemeta.json  myst.yml  pyproject.toml
.github/scripts/: repo_project_bootstrap.mjs
.github/workflows/: book.yml  fair_assessment.yml  fairification-pipeline.yml  generate-codemeta.yml  lint.yml  software-fairification-pipeline.yml  test.yml  use-rsfc.yml
healpix_regrid/: __init__.py  dask.py  healpix.py  kerchunk.py  masking.py
notebook/: Create_ROI_from_bbox.ipynb  Create_healpix.ipynb  Create_healpix.py  Define_healpix_Parent_chunk.ipynb  M1_Kerchunk_Create_Virtualizarr_Gamar.ipynb  M1_Kerchunk_Create_Virtualizarr_Gamar_withDask.ipynb  M1_bof_Kerchunk_Create_Virtualizarr_Gamar-MultiZarr.ipynb  M2_Icechunk_Create_Virtualizarr_Gamar_withDask.ipynb  M2_Icechunk_Use_Virtualizarr_Gamar.ipynb  Prep_regrid.ipynb  README.md  compute_z.ipynb  environment.yml  load_and_plot.ipynb  outer_boundary.geojson  parent_ids.npz  regrid_apply_ufunc.ipynb  simple_regrid.ipynb
singularity_images/: imgsingular_A_hardened_base.def  imgsingular_riomarr_zarr_v0.1.def
singularity_images/f2a_riomar/: README.md  imgsingular_B_conda_f2a_riomar_p311.def  imgsingular_C_f2a_jupyterhub_ifr.def
tests/: test_kerchunk.py  test_masking.py
